updated docs with comments

--- a/agents-docs/content/docs/typescript-sdk/project-structure.mdx
+++ b/agents-docs/content/docs/typescript-sdk/project-structure.mdx
@@ -131,7 +131,7 @@ export const databaseQueryTool = tool({
 
 ### `/data-components/`
 
-Data components for structured UI output. **We recommend using Zod schemas** for type safety:
+Data components for structured UI output:
 
 ```typescript
 // data-components/customer-data.ts
