--- a/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-settings.mdx
@@ -281,7 +281,7 @@ const mySubAgent = subAgent({
 
 ### Data components
 
-Structured output components for rich, interactive responses. **We recommend using Zod schemas** for type safety and better developer experience. See [Data Components](/typescript-sdk/structured-outputs/data-components).
+Structured output components for rich, interactive responses. See [Data Components](/typescript-sdk/structured-outputs/data-components).
 
 ```typescript
 import { z } from 'zod';
@@ -307,7 +307,7 @@ const mySubAgent = subAgent({
 
 ### Artifact components
 
-Components for handling tool or Sub Agent outputs. **We recommend using Zod schemas with the `preview()` helper** for type safety. See [Artifact Components](/typescript-sdk/structured-outputs/artifact-components).
+Components for handling tool or Sub Agent outputs. See [Artifact Components](/typescript-sdk/structured-outputs/artifact-components).
 
 ```typescript
 import { z } from 'zod';
