--- a/agents-docs/content/docs/typescript-sdk/project-structure.mdx
+++ b/agents-docs/content/docs/typescript-sdk/project-structure.mdx
@@ -131,24 +131,22 @@ export const databaseQueryTool = tool({
 
 ### `/data-components/`
 
-Data components for managing structured data:
+Data components for structured UI output:
 
 ```typescript
 // data-components/customer-data.ts
 import { dataComponent } from '@inkeep/agents-sdk';
+import { z } from 'zod';
 
 export const customerData = dataComponent({
   id: 'customer-data',
   name: 'Customer Information',
   description: 'Customer profile and interaction history',
-  schema: {
-    type: 'object',
-    properties: {
-      customerId: { type: 'string' },
-      name: { type: 'string' },
-      email: { type: 'string' }
-    }
-  }
+  props: z.object({
+    customerId: z.string().describe("Customer ID"),
+    name: z.string().describe("Customer name"),
+    email: z.string().describe("Customer email"),
+  }),
 });
 ```
 
