create bearer with keychain

--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -32,16 +32,17 @@ The framework supports three credential store types, each suited for different a
 ### Nango Store
 **Common use case**: OAuth tokens from OAuth2.1/PKCE flows, complex OAuth flows, integrating with external services (Slack, GitHub, Google, etc.), when extra headers are needed, etc. Credentials configured through Visual Builder.
 
-- Managed through Nango (self-hosted or cloud)
+- Managed through Nango (self-hosted or cloud). Follow steps to [setup Nango](/quick-start/credentials).
 - Supports various authentication methods: OAuth2.0, API keys, basic auth, and more
 - Can provide additional metadata headers passed to MCP servers
-- Requires OAuth setup through Visual Builder
+- Requires OAuth setup through [Visual Builder](/visual-builder/tools/mcp-servers)
 
 ### Keychain Store  
-**Common use case**: Locally stored OAuth tokens from OAuth2.1/PKCE flows. Credentials configured through Visual Builder.
+**Common use case**: Locally stored OAuth tokens from OAuth2.1/PKCE flows and Bearer authentication. Credentials configured through Visual Builder.
 
 - Credentials stored in native OS keychain (macOS Keychain Access, Windows Credential Manager, Linux Secret Service)
-- Mainly used locally for development with OAuth services
+- Mainly used locally for development with OAuth services. Not recommended for production.
+- Tokens stored will not refresh automatically after they expire. You will need to login again in the [Visual Builder](/visual-builder/tools/mcp-servers).
 - Requires OAuth setup through Visual Builder
 
 ## Creating and Using Credentials
@@ -120,10 +121,16 @@ retrievalParams: {
 }
 ```
 
-**Keychain store** credentials (created through the Visual Builder - OAuth2.1/PKCE flow):
+**Keychain store** credentials (created through the Visual Builder - OAuth2.1/PKCE flow or Bearer authentication flow):
 ``` typescript
+// OAuth2.1/PKCE flow
 retrievalParams: {
   "key": "oauth_token_<toolId>" // where <toolId> is the id of the MCP tool the credential is associated with
+}
+
+// Bearer authentication
+retrievalParams: {
+  "key": "<id-given-to-bearer-api-key>" // where <id-given-to-bearer-api-key> is the id given to the bearer api key created in through the Visual Builder
 }
 ```
 
