--- a/agents-docs/content/docs/visual-builder/tools/mcp-servers.mdx
+++ b/agents-docs/content/docs/visual-builder/tools/mcp-servers.mdx
@@ -87,7 +87,7 @@ If your MCP server requires authentication, you have two options: either use the
 1. Create your MCP server without selecting a credential
 2. Go to the server details page and click the **"Click to Login"** button
 3. Complete the OAuth authentication flow in your browser
-4. The credential will be automatically created and saved to your keychain
+4. The credential will be automatically created and saved to your [Nango Store](/typescript-sdk/tools/credentials#nango-store) (follow steps to [setup Nango](/quick-start/credentials)). If Nango is not set up, the framework will use the [Keychain Store](/typescript-sdk/tools/credentials#keychain-store) if available.
 
 <img
   src="/images/mcp-server-click-to-login.png"
