--- a/agents-docs/content/docs/quick-start/start-development.mdx
+++ b/agents-docs/content/docs/quick-start/start-development.mdx
@@ -35,7 +35,7 @@ npm install -g @inkeep/agents-cli
 Running this command will push the code you defined your agents and tools with to the Visual Builder.
 
 ```bash
-cd src/weather-project
+cd src/projects/event-planner
 inkeep push
 ```
 
