--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
@@ -39,8 +39,8 @@ export default function Page() {
       api: "http://localhost:3003/api/chat",
       headers: {
         "x-inkeep-tenant-id": "default",
-        "x-inkeep-project-id": "weather-project",
-        "x-inkeep-agent-id": "weather-agent",
+        "x-inkeep-project-id": "event-planner",
+        "x-inkeep-agent-id": "event-planner",
       },
     }),
   });
@@ -177,8 +177,8 @@ export default function Page() {
       api: "http://localhost:3003/api/chat",
       headers: {
         "x-inkeep-tenant-id": "default",
-        "x-inkeep-project-id": "weather-project",
-        "x-inkeep-agent-id": "weather-intermediate-agent",
+        "x-inkeep-project-id": "event-planner",
+        "x-inkeep-agent-id": "event-planner",
         tz: "US/Pacific",
       },
     }),
