--- a/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
+++ b/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
@@ -469,13 +469,13 @@ inkeep add [template]
 
 ```bash
 # Add a template
-inkeep add weather-project
+inkeep add event-planner
 
 # Add template to specific path
-inkeep add weather-project --target-path ./src/templates
+inkeep add event-planner --target-path ./src/templates
 
 # Using specific config file
-inkeep add weather-project --config ./my-config.ts
+inkeep add event-planner --config ./my-config.ts
 ```
 
 ## Configuration File
