--- a/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
@@ -82,7 +82,7 @@ const researchAgent = subAgent({
   name: "Research Agent",
   prompt: "You are a research agent that can generate artifact names and descriptions",
   models: {
-    base: { model: "claude-sonnet-4" },
+    base: { model: "claude-sonnet-4-0" },
     summarizer: {
       model: "gpt-4.1-mini", // This model generates artifact names/descriptions
       providerOptions: {
