--- a/agents-docs/content/docs/visual-builder/project-management.mdx
+++ b/agents-docs/content/docs/visual-builder/project-management.mdx
@@ -117,7 +117,7 @@ Each model type (`base`, `structuredOutput`, `summarizer`) cascades independentl
 // Project Level - Sets defaults for all agents
 Project: {
   models: {
-    base: { model: "claude-sonnet-4" },
+    base: { model: "claude-sonnet-4-0" },
     structuredOutput: { model: "gpt-4.1-mini" },
     summarizer: { model: "gpt-4.1-mini" }
   }
@@ -159,7 +159,7 @@ When a model is overridden at any level, the entire configuration (including pro
 Project: {
   models: {
     base: {
-      model: "claude-sonnet-4",
+      model: "claude-sonnet-4-0",
       providerOptions: {
         temperature: 0.7,
         maxTokens: 4096
@@ -172,7 +172,7 @@ Project: {
 Agent: {
   models: {
     base: {
-      model: "claude-sonnet-4", // Same model
+      model: "claude-sonnet-4-0", // Same model
       providerOptions: {
         temperature: 0.3,  // New temperature
         maxTokens: 2048    // New maxTokens - project maxTokens is NOT inherited
