--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -192,6 +192,10 @@ Click on any conversation to see detailed execution flow:
   style={{ borderRadius: "10px" }}
 />
 
+import CopyTrace from '../snippets/copy-trace.mdx';
+
+<CopyTrace />
+
 ### 2. SigNoz Dashboard
 
 For detailed analysis and further debugging:
