--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -3,9 +3,7 @@ title: Join & Follow
 icon: "LuUsers"
 ---
 
-To get help, share ideas, and provide feedback, join our [Slack community](https://inkeep-ai.slack.com/ssb/redirect).
-
-We'd love to hear about what you're building.
+To get help, share ideas, and provide feedback, join our [Slack community](https://inkeep-ai.slack.com/ssb/redirect). We'd love to hear about what you're building.
 
 You can also find us on:
 
@@ -24,4 +22,4 @@ You can also find us on:
   </Card>
 </Cards>
 
-Feel free to tag us at `@inkeep_ai` on 𝕏 or at `@Inkeep` on LinkedIn with a video of what you're building, we like to highlight what builders are doing with Inkeep where we can.
+Feel free to tag us as `@inkeep_ai` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents-cookbook/tree/main/template-projects).
