proper snippet path

--- a/agents-docs/content/docs/quick-start/traces.mdx
+++ b/agents-docs/content/docs/quick-start/traces.mdx
@@ -192,9 +192,7 @@ Click on any conversation to see detailed execution flow:
   style={{ borderRadius: "10px" }}
 />
 
-import CopyTrace from '../snippets/copy-trace.mdx';
-
-<CopyTrace />
+<Snippet file="copy-trace.mdx"/>
 
 ### 2. SigNoz Dashboard
 
