--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -31,7 +31,7 @@ Clicking on this error card reveals:
 
 This detailed error information helps you pinpoint exactly what went wrong and where in your agent's execution chain.
 
-<Snippet file="./snippets/copy-trace.mdx"/>
+<Snippet file="copy-trace.mdx"/>
 
 ## Step 2: Check Signoz
 
