--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -24,7 +24,7 @@ Agents can also be used to automate complex **AI Workflows** for tasks like:
 A no-code drag-and-drop canvas designed to let both technical and non-technical teams create and manage Agents.
 
 <img
-  src="/gifs/visual-builder.gif"
+  src="/gifs/drag-n-drop.gif"
   alt="No-Code Agent Builder demo"
   width="100%"
   style={{ borderRadius: "10px" }}
