--- a/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/vercel-ai-sdk.mdx
@@ -16,7 +16,7 @@ To build totally custom UIs, you have two options in the Vercel ecosystem:
 
 ## Using AI Elements
 
-For a production-ready UI components, consider using [Vercel AI Elements](https://ai-sdk.dev/elements/overview):
+For production-ready UI components, consider using [Vercel AI Elements](https://ai-sdk.dev/elements/overview):
 
 ```tsx
 import { Conversation, Message, PromptInput, Actions } from '@ai-sdk/react-elements';
